fix: broken styles

--- a/content.css
+++ b/content.css
@@ -27,20 +27,21 @@
   cursor: pointer;
 }
 #__smart-hide-menu .__title h1 {
-  text-align: center;
+  text-align: left;
+  font-size: 25px;
   margin: 0;
   padding: 10px;
   color: white;
   flex: 1;
 }
-#__smart-hide-menu button#__btn-close {
+#__smart-hide-menu #__btn-close {
   background-color: transparent;
   border: none;
   color: white;
   cursor: pointer;
   padding-right: 10px;
 }
-#__smart-hide-menu button#__btn-close svg {
+#__smart-hide-menu #__btn-close svg {
   height: 26px;;
 }
 #__smart-hide-menu .__content {
@@ -60,9 +61,9 @@
   align-items: center;
   margin-bottom: 10px;
 }
-#__smart-hide-menu .__content .__inputs .__top-btns button {
+#__smart-hide-menu .__content .__inputs .__top-btns > div {
   justify-content: center;
-  padding: 10px;
+  padding: 5px;
   margin: 0 5px;
   display: flex;
   align-items: center;
@@ -71,7 +72,7 @@
   border-radius: 3px;
   color: black;
 }
-#__smart-hide-menu .__content .__inputs .__top-btns button#__btn-undo svg {
+#__smart-hide-menu .__content .__inputs .__top-btns #__btn-undo svg {
   height: 16px;
   margin-right: 5px;
 }
@@ -79,8 +80,17 @@
   display: flex;
   align-items: center;
 }
+
 #__smart-hide-menu .__content .__inputs .__input-checkbox input[type="checkbox"] {
   display: none;
+}
+#__smart-hide-menu .__content .__inputs .__input-checkbox input[type="checkbox"] + label {
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-size: 14px;
+  cursor: pointer;
+  line-height: 1;
 }
 #__smart-hide-menu .__content .__inputs .__input-checkbox input[type="checkbox"] + label::before {
   content: '';
@@ -98,19 +108,17 @@
 #__smart-hide-menu .__content .__inputs .__input-checkbox input[type="checkbox"]:checked + label::before {
   content: '✔';
 }
-#__smart-hide-menu .__content .__inputs .__input-checkbox input[type="checkbox"] + label {
-  display: flex;
-  position: relative;
-}
 
-#__smart-hide-menu .__content button#__btn-hide-element {
-  padding: 10px;
+#__smart-hide-menu .__content #__btn-hide-element {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
   background-color: #666;
   color: white;
   border: none;
   cursor: pointer;
   font-size: 16px;
 }
-#__smart-hide-menu .__content button#__btn-hide-element:hover {
+#__smart-hide-menu .__content #__btn-hide-element:hover {
   opacity: 0.8;
 }
